--- a/MVCWebProject/src/main/webapp/styles/products.css
+++ b/MVCWebProject/src/main/webapp/styles/products.css
@@ -13,32 +13,38 @@ body {
 #pageWrapper {
 	height: 100%;
 	width: 100%;
-	clear: both;
 }
 
-#pageWrapper div {
+.pageHeading {
 	clear: both;
-	margin-left: auto;
-	margin-right: auto;
+	margin: auto;
 }
 
-#pageHeading {
+.userInfo {
 	color: white;
-	width: 100%;
-	text-align: center;
 	text-shadow: 2px 2px black;
 }
 
-#detailsBox {
+.divTable{
+	clear: both;
+	width: 50%;
+	margin: auto;
+	display: table;
 	background-color: white;
-	width: 300px;
-	font-weight: bold;
 	border: 5px solid black;
-	padding: 15px;
-	margin: 15px;
 }
 
-#detailsBox input {
-	width: 100%;
-	clear: both;
+.divTableRow {
+	display: table-row;
+}
+
+.divTableCell {
+	border: 1px solid #999999;
+	display: table-cell;
+	padding: 3px 10px;
+	text-align: center;
+}
+
+.divTableBody {
+	display: table-row-group;
 }
